# diamond

./: .gitignore  2  BUGS.md  Cargo.toml  ]  build.rs
.cargo/: config.toml
.github/workflows/: ci.yaml
docs/: book.toml  language.md  practice.md
docs/src/: README.md  SUMMARY.md
docs/src/concepts/: ethos.md  expression.md
docs/src/intro/: what-is-diamond.md
docs/src/writing/: basics.md  hello-world.md
interpreter/: Cargo.toml
interpreter/src/: engine.rs  stdlib.rs  types.rs
interpreter/src/functions/: arrays.rs  dump_var.rs  file.rs  itoa.rs  math.rs  mod.rs  printf.rs  result.rs  strings.rs  system.rs
interpreter/src/stdlib/: headers.di
lang-examples/: bench.di  columns.di  csv_to_toml.di  test.csv  testing.di
parse/: Cargo.toml  language.md
parse/src/: grammar.pest  grammar.rs  lib.rs  types.rs
parse/src/types/: for_.rs  funccall.rs  funclet.rs  grouping.rs  let_.rs  match_.rs
shared/: Cargo.toml
shared/src/: bin_header.rs  lib.rs
sig_macro/: Cargo.toml
sig_macro/src/: lib.rs
src/: main.rs
src/interpreter/: engine.rs  mod.rs  stdlib.rs  types.rs
src/interpreter/functions/: arrays.rs  dump_var.rs  file.rs  itoa.rs  math.rs  mod.rs  nth.rs  panic.rs  printf.rs  result.rs  strings.rs  system.rs  testing_branch.rs
src/parse/: grammar.pest  grammar.rs  mod.rs  types.rs
src/parse/types/: for_.rs  funccall.rs  funclet.rs  grouping.rs  let_.rs  match_.rs
src/stdlib/: headers.di  std.di  std.rs
src/typing/: core.rs  mod.rs  pass_one.rs  pass_two.rs  phase_one.rs  strata.rs  types.rs
src/typing/strata/: ir.rs  mod.rs  web.rs
src/typing/strata/vargen_strategies/: interpreter.rs  mod.rs  qbe.rs
type-checker/: Cargo.toml
type-checker/src/: core.rs  pass_one.rs  pass_two.rs  strata.rs  types.rs
type-checker/src/strata/vargen_strategies/: interpreter.rs  qbe.rs
