[package]
name = "diamond"
version = "0.1.0"
edition = "2024"

[dependencies]
enum-as-inner = "0.7.0"
miette = { version = "7.6.0", features = ["fancy"] }
pest = "2.8.6"
pest_consume = { git = "https://github.com/Nadrieril/pest_consume", version = "1.1.3" }

[[bin]]
name = "di"
path = "src/main.rs"
