[package]
name = "diamond"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
enum-as-inner = "0.7.0"
miette = { version = "7.6.0", features = ["fancy"] }
pest = { version = "2.8.6", features = ["miette-error"] }
pest_consume = { git = "https://github.com/Nadrieril/pest_consume", version = "1.1.3" }
thiserror = "2.0.18"
typed-builder = "0.23.2"

[[bin]]
name = "di"
path = "src/main.rs"
