[package]
name = "diamond"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
bincode = "2.0.0"
type-checker = { version = "0.1.0", path = "type-checker" }
parse = { version = "0.1.0", path = "parse" }
interpreter = { version = "0.1.0", path = "interpreter" }
shared = { version = "0.1.0", path = "shared" }

[[bin]]
name = "di"
path = "src/main.rs"

[profile.release]
lto = "fat"
codegen-units = 1

[build-dependencies]
bincode = "2.0.0"
parse = { path = "parse" }
shared = { version = "0.1.0", path = "shared" }
type-checker = { path = "type-checker" }
