[package]
name = "type-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.0", features = ["serde"] }
enum-as-inner = "0.7.0"
miette = { version = "7.6.0", features = ["fancy"] }
parse = { version = "0.1.0", path = "../parse" }
pest = "2.8.6"
serde = { version = "1.0.228", features = ["derive", "rc", "serde_derive"] }
thiserror = "2.0.18"
